--- a/app/src/main/res/layout/main_frangment_layout.xml
+++ b/app/src/main/res/layout/main_frangment_layout.xml
@@ -17,7 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
 
         <!--For Logo-->
         <ImageView
