--- a/app/src/main/res/layout/main_frangment_layout.xml
+++ b/app/src/main/res/layout/main_frangment_layout.xml
@@ -69,6 +69,16 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/txtNewRegister"
+            android:clickable="true"
+            android:text="@string/new_register"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 
@@ -80,6 +90,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:text="Login" />
-
 
 </RelativeLayout>
