--- a/app/src/main/res/layout/register_fragment_layout.xml
+++ b/app/src/main/res/layout/register_fragment_layout.xml
@@ -2,4 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+
+    </android.support.v7.widget.Toolbar>
+
 </RelativeLayout>
