--- a/app/src/main/res/layout/register_fragment_layout.xml
+++ b/app/src/main/res/layout/register_fragment_layout.xml
@@ -3,9 +3,31 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imvBack"
+            android:src="@mipmap/ic_back2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_centerInParent="true"
+            android:textSize="@dimen/h1"
+            android:textColor="@color/textColorPrimary"
+            android:textStyle="bold"
+            android:text="@string/new_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
     </android.support.v7.widget.Toolbar>
 
