--- a/app/src/main/res/layout/main_frangment_layout.xml
+++ b/app/src/main/res/layout/main_frangment_layout.xml
@@ -40,6 +40,7 @@
                 android:src="@mipmap/ic_user" />
 
             <EditText
+                android:id="@+id/edtUser"
                 android:textColorHint="@color/colorPrimary"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_width="match_parent"
@@ -60,12 +61,13 @@
                 android:src="@mipmap/ic_password" />
 
             <EditText
+                android:id="@+id/edtPassword"
                 android:textColorHint="@color/colorPrimary"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/pass"
-                android:inputType="text" />
+                android:inputType="textPassword" />
 
         </LinearLayout>
 
@@ -84,6 +86,7 @@
 
     <!--For Button-->
     <Button
+        android:id="@+id/btnLogin"
         android:textColor="@color/textColorPrimary"
         android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
